examples/type_system/failing/09_compile_typed_call_return_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/09_compile_typed_call_return_mismatch.flx
// error[E300]: Annotation Type Mismatch
//
// The value of `n` does not match its type annotation.
//
//   examples/type_system/failing/09_compile_typed_call_return_mismatch.flx:31:14
//    |
// 31 | let n: Int = make_label()
//    |              ^^^^^^^^^^^^
//    |              ------------ this value has type `String`
//
//    |        --- but `n` was annotated as `Int`
//
// Note:
//   annotated type: Int
//   value type: String
//
// Help:
//   Change `n` to a `Int` value or update the annotation.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn make_label() -> String {
    "label"
}

let n: Int = make_label()
